# videocapture-mcp

./: README.md  mcp_test.py  pyproject.toml  videocapture_mcp.py
images/: mcp—config  promot
