[project]
name = "videocapture-mcp"
version = "0.1.0"
description = "Model Context Protocol (MCP) server to capture from an OpenCV-compatible webcam"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.11.3",
    "httpx>=0.28.1",
    "mcp[cli]>=1.4.1",
    "opencv-python>=4.11.0.86",
]

[[project.authors]]
name = "13rac1"

[project.scripts]
videocapture_mcp = "videocapture_mcp.main"